# frp-workshop

pong/: .stylish-haskell.yaml  HLint.hs  Makefile  frp-workshop.cabal  pong.cabal  stack.yaml
pong/app/: Counter.hs  Main.hs  Pong.hs  Snake.hs  Synthesizer.hs
pong/src/: Lib.hs
