name:                frp-workshop
version:             0
synopsis:            Quchen's Stack template
description:         See README.md
homepage:            https://github.com/quchen/pong#readme
license:             BSD3
license-file:        LICENSE.md
author:              David »quchen« Luposchainsky <dluposchainsky+pong (λ) gmail>
maintainer:          David »quchen« Luposchainsky <dluposchainsky+pong (λ) gmail>
copyright:           David »quchen« Luposchainsky <dluposchainsky+pong (λ) gmail>
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

executable snake
    build-depends:
          base

        , async
        , lens
        , random
        , reactive-banana
        , text
        , containers
        , vty
    hs-source-dirs:      app
    main-is:             Snake.hs
    ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
    default-language:    Haskell2010

executable pong
    build-depends:
          base

        , async
        , lens
        , random
        , reactive-banana
        , text
        , vty
    hs-source-dirs:      app
    main-is:             Pong.hs
    ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
    default-language:    Haskell2010

executable synthesizer
    build-depends:
          base
        , reactive-banana
    hs-source-dirs:      app
    main-is:             Synthesizer.hs
    ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
    default-language:    Haskell2010

executable counter
    build-depends:
          base
        , reactive-banana
    hs-source-dirs:      app
    main-is:             Counter.hs
    ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
    default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/quchen/pong
