name:                pong
version:             0
synopsis:            Quchen's Stack template
description:         See README.md
homepage:            https://github.com/quchen/pong#readme
license:             BSD3
license-file:        LICENSE.md
author:              David »quchen« Luposchainsky <dluposchainsky+pong (λ) gmail>
maintainer:          David »quchen« Luposchainsky <dluposchainsky+pong (λ) gmail>
copyright:           David »quchen« Luposchainsky <dluposchainsky+pong (λ) gmail>
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
    build-depends:
          base >= 4.7 && < 5
    hs-source-dirs:      src
    exposed-modules:     Lib
    default-language:    Haskell2010
    ghc-options:         -Wall

executable pong-exe
    build-depends:
          base
        , pong
        , reactive-banana
        , lens
        , async
    hs-source-dirs:      app
    main-is:             Main.hs
    ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
    default-language:    Haskell2010

executable synthesizer
    build-depends:
          base
        , reactive-banana
    hs-source-dirs:      app
    main-is:             Synthesizer.hs
    ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
    default-language:    Haskell2010

executable counter
    build-depends:
          base
        , reactive-banana
    hs-source-dirs:      app
    main-is:             Counter.hs
    ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
    default-language:    Haskell2010

test-suite pong-test
    build-depends:
          base
        , pong
    ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
    type:                exitcode-stdio-1.0
    hs-source-dirs:      test
    main-is:             Test.hs
    default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/quchen/pong
